--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -7,15 +7,27 @@
  */
 
 plugins {
-    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    id 'maven-publish'
+    id 'java-library-distribution'
+    id "com.github.hierynomus.license" version "0.15.0"
 }
 
 version '0.1.0'
 
+distributions {
+    main {
+        distributionBaseName = 'zwavejs-extension'
+        contents {
+            from('src/main/resources') {
+                include '*Information.yaml'
+            }
+        }
+    }
+}
+
 repositories {
     mavenLocal()
+    // use github packages from parrot-ha hub
     maven {
         name "ParrotHubGitHub"
         url "https://maven.pkg.github.com/parrot-ha/hub"
@@ -26,32 +38,27 @@ repositories {
     }
 
     // Use JCenter for resolving dependencies.
-    jcenter()
+    mavenCentral()
+    gradlePluginPortal()
 }
 
 dependencies {
+    implementation "org.java-websocket:Java-WebSocket:1.5.2"
+
+    // the following will be provided by the parrot-hub classpath at runtime.
+    compileOnly 'com.parrotha:parrothub-core:0.2.2'
+    compileOnly 'com.parrotha:parrothub-integration-common:0.2.2'
+    compileOnly 'com.parrotha:parrothub-zwave-common:0.2.2'
+
+    compileOnly 'org.codehaus.groovy:groovy-json:3.0.9'
+
+    compileOnly "org.apache.logging.log4j:log4j-slf4j-impl:2.14.0"
+    compileOnly group: 'org.apache.logging.log4j', name: 'log4j-api', version: "2.14.0"
+    compileOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.14.0"
+
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-
-    // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:29.0-jre'
-    
-    implementation 'com.parrotha:parrothub-core:0.2.2'
-    implementation 'com.parrotha:parrothub-integration-common:0.2.2'
-    implementation 'com.parrotha:parrothub-zwave-common:0.2.2'
-
-    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.14.0"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "2.14.0"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.14.0"
-
-    implementation "org.java-websocket:Java-WebSocket:1.5.2"
-    implementation 'org.codehaus.groovy:groovy-json:3.0.9'
 }
 
 tasks.named('test') {
@@ -59,11 +66,15 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-//java {
-//    withSourcesJar()
-//}
+license {
+    ext.year = Calendar.getInstance().get(Calendar.YEAR)
+    header rootProject.file('header.txt')
+    strictCheck true
+    ignoreFailures true
+    skipExistingHeaders false
+    includes(["**/*.java", "**/*.groovy"])
+}
 
 jar {
     archiveBaseName = 'zwavejs-integration'
 }
-
