--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ hs_err_pid*
 .gradle
 **/build/
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
 # IntelliJ
 out/
 .idea/
