rename yaml files

--- a/lib/src/main/resources/parrotExtension.yaml
+++ b/lib/src/main/resources/parrotExtension.yaml
@@ -7,3 +7,4 @@ licenseFile: TBD
 releaseNotes: TBD
 description: Provides an integration with zwave-js server.
 category: INTEGRATIONS
+packaging: jar
